fix admin layout issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
 #root {
-  max-width: 1280px;
+  /* max-width: 1280px; */
+  /* min-width: 1200px; */
   margin: 0 auto;
   text-align: center;
 }
+
 
 .logo {
   height: 6em;
